agregar el metodo de filtrar
