# docs/swagger.yaml
@@ -534,6 +534,37 @@ paths:
       summary: menus con padres
       tags:
       - menus
+  /menu/filter/{query}:
+    get:
+      consumes:
+      - application/json
+      description: obtener menus por medio de la query
+      parameters:
+      - description: campo de concidencia
+        in: path
+        name: query
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: listado de menus
+          schema:
+            items:
+              $ref: '#/definitions/entity.Menu'
+            type: array
+        "500":
+          description: Error interno del servidor
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: filtro de menu
+      tags:
+      - menus
   /menu/parents/{entidadId}:
     get:
       consumes:
