# router/menu.router.go
@@ -19,6 +19,7 @@ func NewMenuRouter(router *gin.RouterGroup, db *gorm.DB) {
 	routerGroup.GET("/parents/:entidadId", MenuController.GetParentsMenuByEntity)
 	routerGroup.GET("/childs-parent/:id", MenuController.GetChildByParentId)
 	routerGroup.GET("/childs/:entidadId", MenuController.GetChildsMenuByEntity)
+	routerGroup.GET("filter/:query", MenuController.FilterMenu)
 }
 
 func init() {
